--- a/app/assets/css/common.css
+++ b/app/assets/css/common.css
@@ -1,8 +1,8 @@
 .container {
-  margin: 80px auto 80px;
+  margin: 80px auto 0;
   max-width: 940px;
   height: 100%;
-  min-height: calc(100vh - 160px);
+  min-height: calc(100vh - 80px);
 }
 
 @media screen and (max-width:550px) { 
