--- a/app/assets/css/common.css
+++ b/app/assets/css/common.css
@@ -1,8 +1,7 @@
-.container {
-  margin: 80px 0 0;
-  max-width: 940px;
-  height: 100%;
-  min-height: calc(100vh - 80px);
+#__layout .container {
+	max-width: 2000px;
+  padding: 0;
+  margin: 70px 0 120px;
 }
 
 @media screen and (max-width:550px) { 
