--- a/app/assets/css/common.css
+++ b/app/assets/css/common.css
@@ -5,6 +5,10 @@ html {
   position: relative;
 }
 
+.pl-20 {
+  padding-left: 20px;
+}
+
 /* base */
 #__layout .container {
   padding: 16px;
@@ -88,15 +92,24 @@ html {
   margin: 70px 0 120px;
 }
 
-@media screen and (max-width:550px) { 
+@media screen and (max-width:320px) { 
   .pc-btn {
     display: none !important;
   }
+  .site-title {
+    font-size: 15px;
+  }
+  .site-sub-title {
+    font-size: 14px;
+  }
 }
 
-@media screen and (min-width:550px) { 
+@media screen and (min-width:450px) { 
   .mobile-btn {
     display: none !important;
+  }
+  .site-title {
+    font-size: 22px;
   }
 }
 
@@ -108,10 +121,27 @@ html {
     padding: 0 150px;
   }
   .container__content {
-    padding: 0 140px;
+    padding: 0 200px;
+  }
+  .site-title {
+    font-size: 26px;
+  }
+  .site-sub-title {
+    font-size: 16px;
   }
 }
-
+.site-title {
+  text-align: center;
+  width: 100%;
+  letter-spacing: .08em;
+  font-weight: 700;
+}
+.site-sub-title {
+  text-align: center;
+  color: #757575;
+  margin: 10px 0;
+  font-weight: 700;
+}
 .background-color-primary {
   background: #fbfbfb !important;
 }
